Fix layout issues

--- a/resources/assets/sass/landingpage.scss
+++ b/resources/assets/sass/landingpage.scss
@@ -63,7 +63,8 @@ h1 {
 // features
 
 .feature-wrapper {
-  padding: 50px 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
 
   h2 {
     margin-top: 0;
